--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <body>
         <h1 id="page-heading"> 
             <i class="fas fa-address-book"></i>
-            My Contacts List</h1>
+            My Contact List</h1>
         <div class="contacts-list-container">
             <ul>
                 <% for(let i of contact_list){ %>
